color and text changes to homepage

--- a/src/components/Ending/Ending.scss
+++ b/src/components/Ending/Ending.scss
@@ -1,5 +1,5 @@
 .Ending {
-  background-color: #4d5eff;
+  background-color: #693699;
 
   .ending-container {
     display: flex;
@@ -28,7 +28,7 @@
       transition-timing-function: ease-in-out;
       padding: 1rem;
       width: 100%;
-      color: #4d5eff;
+      color: #693699;
       font-weight: bold;
       background-color: #fff;
       border-radius: 50px;
