--- a/src/pages/Home/components/Highlights/Highlight/Highlight.scss
+++ b/src/pages/Home/components/Highlights/Highlight/Highlight.scss
@@ -30,7 +30,7 @@
       a {
         font-family: 'Nunito', sans-serif;
         font-size: 1.5rem;
-        color: #4d5eff;
+        color: #693699;
       }
     }
 
