--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -107,7 +107,7 @@ nav.navbar-main {
             }
 
             a:hover {
-              color: #4053fe;
+              color: #693699;
             }
           }
 
@@ -119,19 +119,19 @@ nav.navbar-main {
               margin-left: 1rem;
               margin-right: 0;
               padding: 0.5rem 1.5rem;
-              background-color: #4d5eff;
+              background-color: #693699;
               border-radius: 50px;
               transition: 0.2s;
               transition-timing-function: ease-in-out;
             }
 
             a:hover {
-              background-color: #4d5eff;
+              background-color: #693699;
               box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
             }
 
             a:active {
-              background-color: #6574f7;
+              background-color: #730C99;
               box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             }
           }
