finalized photo edits and text edits on homepage

--- a/src/pages/Home/components/Highlights/Highlight/Highlight.scss
+++ b/src/pages/Home/components/Highlights/Highlight/Highlight.scss
@@ -87,7 +87,7 @@
 
     // Row format for highlights
     .highlight-container.highlight-learn,
-    .highlight-container.highlight-network {
+    .highlight-container.highlight-connect {
       flex-direction: row-reverse;
     }
 
