--- a/src/pages/About/components/WhatWeDo/WhatWeDo.scss
+++ b/src/pages/About/components/WhatWeDo/WhatWeDo.scss
@@ -1,7 +1,7 @@
 // What We Do section
 
 .about-what-we-do {
-  background-color: #fff9ee;
+  background-color: #f8eeff;
 
   .about-what-we-do-container {
     margin: 0 auto;
