--- a/src/pages/About/components/Leadership/Leadership.scss
+++ b/src/pages/About/components/Leadership/Leadership.scss
@@ -1,71 +1,272 @@
 // Leadership section
 
-.about-leadership {
-  background-color: #ffffff;
+// .about-leadership {
+//   background-color: #ffffff;
+//
+//   .about-leadership-container {
+//     margin: 0 auto;
+//     padding: 3rem 0 1rem;
+//
+//     .about-leadership-beginning {
+//       padding-left: 8vw;
+//       padding-right: 8vw;
+//       margin-bottom: 2rem;
+//
+//       h2 {
+//         font-size: 2.5rem;
+//         font-weight: bold;
+//       }
+//     }
+//
+//     .about-roles-container {
+//       padding: 0 6.25vw;
+//     }
+//   }
 
-  .about-leadership-container {
-    margin: 0 auto;
-    padding: 3rem 0 1rem;
+//BEGIN CODEBASE
 
-    .about-leadership-beginning {
-      padding-left: 8vw;
-      padding-right: 8vw;
-      margin-bottom: 2rem;
+.cb-draggable-row-card {
+  cursor: grab;
+}
 
-      h2 {
-        font-size: 2.5rem;
-        font-weight: bold;
-      }
-    }
+.cb-draggable-row-container {
+  width: 100%;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  overflow-x: auto !important;
+}
 
-    .about-roles-container {
-      padding: 0 6.25vw;
-    }
+@media only screen and (max-width: 479px) {
+  .cb-draggable-row-card {
+    margin-bottom: 20px;
   }
+}
+
+@media only screen and (min-width: 480px) {
+  .cb-draggable-row-card {
+    max-width: 250px !important;
+    min-width: 250px !important;
+    margin-right: 20px;
+  }
+
+  .cb-draggable-row-hidden {
+    min-width: 25px;
+  }
+
+  .cb-draggable-row-row {
+    flex-wrap: nowrap;
+  }
+}
+
+.cb-card {
+  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  transition: transform 0.2s;
+}
+
+.cb-card:hover {
+  transform: scale(1.03);
+}
+
+.cb-card-body {
+  font-family: "Inter-Medium";
+  font-size: 13px;
+  padding: 25px;
+}
+
+.cb-card-blue {
+  background-color: #336ee2;
+}
+
+.cb-card-orange {
+  background-color: #f77b6f;
+}
+
+.cb-card-navy {
+  background-color: #3b5c9d;
+}
+
+.cb-card-green {
+  background-color: #36b37e;
+}
+
+.cb-wrapper-gray {
+  width: 100%;
+  background-color: #f6f7f8;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.cb-wrapper-white {
+  width: 100%;
+  background-color: #ffffff;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.cb-wrapper-blue {
+  background-color: #336ee2;
+  width: 100%;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+.cb-section-title {
+  color: rgba(47, 47, 48, 0.6);
+  font-size: 13px;
+  margin-bottom: 30px;
+}
+
+.cb-section-heading {
+  font-family: "Inter-SemiBold";
+  font-size: 24px;
+  color: #2f2f30;
+  margin-bottom: 10px;
+}
+
+.cb-section-text {
+  font-family: "Inter-Medium";
+  font-size: 14px;
+  color: #80868b;
+}
+
+.cb-airtable {
+  border-radius: 5px;
+  margin-top: 100px;
+}
+//END CODEBASE
+
+  :root {
+  --gutter: 20px;
+}
+
+.app {
+  padding: var(--gutter) 0;
+  display: grid;
+  grid-gap: var(--gutter) 0;
+  grid-template-columns: var(--gutter) 1fr var(--gutter);
+  align-content: start;
+}
+
+.app > * {
+  grid-column: 2 / -2;
+}
+
+.app > .full {
+  grid-column: 1 / -1;
+}
+
+.hs {
+  display: grid;
+  grid-gap: calc(var(--gutter) / 2);
+  grid-template-columns: 10px repeat(6, calc(50% - var(--gutter) * 2)) 10px;
+  grid-template-rows: minmax(150px, 1fr);
+
+  overflow-x: scroll;
+  scroll-snap-type: x proximity;
+  padding-bottom: calc(.75 * var(--gutter));
+  margin-bottom: calc(-.5 * var(--gutter));
+}
+
+.hs:before,
+.hs:after {
+  content: '';
+}
+
+/* Hide scrollbar */
+.hide-scroll {
+  overflow-y: hidden;
+  margin-bottom: calc(-.1 * var(--gutter));
+}
+
+
+/* Demo styles */
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: grid;
+  place-items: center;
+  background: #456173;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+.app {
+  width: 100%;
+  height: 667px;
+  background: #FFFFFF;
+  overflow-y: scroll;
+}
+
+.hs > li,
+.item {
+  scroll-snap-align: center;
+  padding: calc(var(--gutter) / 2 * 1.5);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+  background: #f8eeff;
+  border-radius: 8px;
+}
 
   // 700px/43.75rem and above (Vertical tablets and large horizontal phones)
   // 10vw of padding for width on large horizontal phones and tablets
-  @media screen and (min-width: 43.75rem) {
-    margin: 0 auto 3rem;
-
-    .about-leadership-container {
-      .about-leadership-beginning {
-        padding-left: 6.25vw;
-        padding-right: 6.25vw;
-
-        max-width: 52rem;
-        margin: 0 auto 4rem;
-        text-align: center;
-
-        h2 {
-          font-size: 3rem;
-        }
-      }
-
-      .about-roles-container {
-        padding: 0;
-      }
-    }
-  }
-
-  // 1024px (horizontal tablets)
-  @media screen and (min-width: 64rem) {
-    .about-leadership-container {
-      .about-leadership-beginning {
-        padding-left: 0;
-        padding-right: 0;
-      }
-    }
-  }
-
-  // 1366px (medium laptops)
-  // Increase margin on top and set max width for all larger resolutions
-  @media screen and (min-width: 85.375rem) {
-    margin: 0 auto;
-
-    .about-leadership-container {
-      padding: 3rem 0 1rem;
-      max-width: var(--large-screen-max-width);
-    }
-  }
-}
+//   @media screen and (min-width: 43.75rem) {
+//     margin: 0 auto 3rem;
+//
+//     .about-leadership-container {
+//       .about-leadership-beginning {
+//         padding-left: 6.25vw;
+//         padding-right: 6.25vw;
+//
+//         max-width: 52rem;
+//         margin: 0 auto 4rem;
+//         text-align: center;
+//
+//         h2 {
+//           font-size: 3rem;
+//         }
+//       }
+//
+//       .about-roles-container {
+//         padding: 0;
+//       }
+//     }
+//   }
+//
+//   // 1024px (horizontal tablets)
+//   @media screen and (min-width: 64rem) {
+//     .about-leadership-container {
+//       .about-leadership-beginning {
+//         padding-left: 0;
+//         padding-right: 0;
+//       }
+//     }
+//   }
+//
+//   // 1366px (medium laptops)
+//   // Increase margin on top and set max width for all larger resolutions
+//   @media screen and (min-width: 85.375rem) {
+//     margin: 0 auto;
+//
+//     .about-leadership-container {
+//       padding: 3rem 0 1rem;
+//       max-width: var(--large-screen-max-width);
+//     }
+//   }
+// }
