--- a/src/pages/Home/components/Welcome/Welcome.scss
+++ b/src/pages/Home/components/Welcome/Welcome.scss
@@ -283,8 +283,8 @@ section.Welcome {
     margin-top: 2%;
 
     .welcome-container {
-      max-width: 76.875rem;
-      padding: 0;
+      // max-width: 76.875rem;
+      padding: 40px;
     }
   }
 
