--- a/src/pages/About/components/WhatWeDo/WhatWeDo.scss
+++ b/src/pages/About/components/WhatWeDo/WhatWeDo.scss
@@ -64,9 +64,9 @@
     margin: 0 auto;
 
     .about-what-we-do-container {
-      // padding: 3rem 0 1rem;
-      padding-left: 50px;
-      padding-right: 50px;
+      padding: 3rem 0 1rem;
+      padding-left: 0;
+      padding-right: 0;
       // max-width: var(--large-screen-max-width);
     }
   }
