--- a/src/pages/About/components/ClubStructure/club-structure.scss
+++ b/src/pages/About/components/ClubStructure/club-structure.scss
@@ -32,7 +32,6 @@
   padding-top: 15px;
   padding-bottom: 15px;
   display: flex;
-  overflow-x: auto;
 
 }
 
@@ -41,6 +40,7 @@
   height: 350px;
   padding-top: 25px;
   padding-bottom: 25px;
+  flex-wrap: nowrap !important;
   overflow-x: auto !important;
 }
 
