--- a/src/pages/About/components/Leadership/Leadership.scss
+++ b/src/pages/About/components/Leadership/Leadership.scss
@@ -34,6 +34,11 @@
   max-width: 250px;
 }
 
+.test-footer {
+  height: 15px;
+  padding: 2px;
+}
+
 .card-title {
   font-family: "Raleway", sans-serif;
   padding-top: 5px;
