--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,13 @@
 .Footer {
   background-color: #3e206d;
-
+  img {
+    border: 0;
+    height: 60px;
+    width: 60px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .footer-container {
     padding: 1rem 0;
     max-width: 100%;
@@ -17,6 +24,8 @@
     a {
       color: rgb(148, 214, 255);
     }
+
+
   }
 
   // 700px (vertical tablets and horizontal phones)
