--- a/src/pages/Join/Join.scss
+++ b/src/pages/Join/Join.scss
@@ -1,23 +1,34 @@
 // Join form page.
 .Join {
   // Mobile styles
-  background-image: url('../../assets/join.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
+  // background-image: url('../../assets/join.jpg');
+  // background-size: cover;
+  // background-repeat: no-repeat;
+  // height: 100vh;
 
+  body > #root > div {
+    width: 100vh;
+  }
+
+
+  max-width: var(--large-screen-max-width);
   .join-flex-container {
     display: flex;
+    position: absolute;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 100%;
+
+
 
     // padding: 5rem 0;
 
     .join-container {
-      padding: 3rem 1.5rem;
+      padding: 0;
       width: 90vw;
-      background-color: #fff;
+      background-color: #f8eeff !important;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
       border-radius: 10px;
       height: auto;
@@ -121,22 +132,18 @@
   @media screen and (min-width: 48rem) {
     .join-flex-container {
       .join-container {
-        max-width: 512px;
-
-        form {
-          margin-top: 2rem;
-
-          .form-name-row {
-            .form-first-name {
-              width: 100%;
-            }
-
-            .form-last-name {
-              width: 100%;
-            }
-          }
-        }
+        max-width: var(--large-screen-max-width);
+        min-width: var(--large-screen-max-width);
       }
     }
   }
+  @media screen and (min-width: 85.375rem) {
+    margin-top: 2%;
+
+    .welcome-container {
+
+    }
+  }
+
+
 }
