--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -116,9 +116,9 @@ nav.navbar-main {
             a {
               color: #fff;
               font-weight: bold;
-              margin-left: 1rem;
+              margin-left: 0;
               margin-right: 0;
-              padding: 0.5rem 1.5rem;
+              padding: 11px;
               background-color: #693699;
               border-radius: 50px;
               transition: 0.2s;
