--- a/src/pages/Resources/Resources.scss
+++ b/src/pages/Resources/Resources.scss
@@ -2,6 +2,33 @@
   max-width: 87.5vw;
   margin: 2.5vh auto 10vh;
 
+  .card {
+    width:100%;
+    max-width: 250px;
+  }
+
+  .test-footer {
+    height: 15px;
+    padding: 2px;
+  }
+
+  .card-text {
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .card-title {
+    font-family: "Raleway", sans-serif;
+    padding-top: 5px;
+    align: center;
+  }
+
+  .card-img-top {
+    margin: 0 !important;
+    border-radius: 2px !important;
+  }
+
   span {
     margin: 0 auto;
     display: block;
@@ -35,38 +62,19 @@
     }
   }
 
-  a {
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Nunito', sans-serif;
-    font-size: 1.25rem;
-    transition: 0.2s;
-    transition-timing-function: ease-in-out;
-    padding: 1rem 25vw;
-    color: #fff;
-    font-weight: bold;
-    background-color: #4d5eff;
-    border-radius: 50px;
-  }
 
-  a:hover {
-    background-color: #5767fe;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    text-decoration: none;
-    color: #fff;
-  }
 
-  a:active {
-    background-color: #6574f7;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  a.linky {
+    font-family: "Raleway", sans-serif;
+  }
+  a.linky:hover {
+    color: #BE00FE;
   }
 
   @media screen and (min-width: 80rem) {
     display: flex;
     flex-direction: column;
-    max-width: 53.8125rem; // 861px, 70% of 1230px
+    max-width: 87.5vw; // 861px, 70% of 1230px
     margin: 5vh auto 20%;
 
     h1 {
@@ -78,12 +86,13 @@
     }
 
     p {
-      margin-bottom: 2.5rem;
+      margin-bottom: 0;
     }
 
     a {
-      font-size: 1.5rem;
-      padding: 1rem 5rem;
+      font-size: 1rem;
+      padding-bottom: 0;
+      padding-top: 10px;
     }
   }
 }
